api appears to be working again
